k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 10.105.247.24/client-image:latest
          ports:
            - containerPort: 8080 # Ensure this matches your app's listening port
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080 # Internal service port
      targetPort: 8080 # Port the container is listening on
  type: ClusterIP # Internal access only, you can change to NodePort or LoadBalancer if needed
