k8s/client-service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080 # Internal port on the service
      targetPort: 8080 # Port your mock client is listening on inside the container
  type: ClusterIP
